--- a/vijay.html
+++ b/vijay.html
@@ -4,3 +4,5 @@
 <hr>
 
 <p>Joseph Vijay Chandrasekhar (born June 22, 1974), known mononymously as Vijay or by the moniker Thalapathy (Commander), is one of India's most influential film stars and a prominent political figure in Tamil Nadu. As of late 2025, he has transitioned from a record-breaking acting career to full-time political leadership. </p>
+
+<p> contact: 5698745268</p>
